fix z-index and blockly height bullshit on minimized FF.

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -146,6 +146,7 @@ header > h1 {
     -webkit-align-items: stretch;
     flex-grow: 1;
     -webkit-flex-grow: 1;
+    height: 100%; /* required for minimized FF, don't know why */
 }
 
 #blockly {
@@ -369,7 +370,7 @@ header button, .control-btn, .control-icon-btn {
     animation-direction: alternate;
     animation-timing-function: ease-in-out;
     display: none;
-    z-index: 1;
+    z-index: 2;
 }
 
 .slider-labels {
